@@ -16,7 +16,7 @@ confdb0.proxy=false
 
 confdb1.dbSetup=Run3 Offline (socks tunnel)
 confdb1.dbType=oracle
-confdb1.dbHost=10.116.96.139
+confdb1.dbHost=10.116.96.89
 confdb1.dbPort=10121
 confdb1.dbName=cms_cond.cern.ch
 confdb1.dbUser=cms_hlt_v3_w
@@ -65,7 +65,7 @@ confdb6.proxy=false
 
 confdb7.dbSetup=DAQv2
 confdb7.dbType=oracle
-confdb7.dbHost=cmsonr1-s.cms, cmsonrr2-s.cms
+confdb7.dbHost=cmsonr1-s.cms, cmsonr2-s.cms
 confdb7.dbPort=10121
 confdb7.dbName=cms_omds_lb.cern.ch
 confdb7.dbUser=cms_hlt_gdr_w
